force-app/main/default/objects/Contract_Request_Form__c/Contract_Request_Form__c.object-meta.xml
<CustomObject>
    <label>Contract Request Form</label>
    <nameField>
        <displayFormat>REQ-{000000}</displayFormat>
        <label>Contract Request Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Request Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>