force-app/main/default/objects/Contract_Request_Form__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jessica Karbowski</fullName>
            </value>
            <value>
                <fullName>Jill Wieler</fullName>
            </value>
            <value>
                <fullName>Nicole Burkhart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>