force-app/main/default/objects/Contract_Request_Form__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract Sales to mark once complete</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>