force-app/main/default/objects/Contract_Request_Form__c/fields/Customer_Address_Corporate_HQ__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_Corporate_HQ__c</fullName>
    <label>Customer Address (Corporate HQ)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>