force-app/main/default/objects/Contract_Request_Form__c/fields/Customer_Name_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Legal_Name__c</fullName>
    <label>Customer Name (Legal Name)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>