force-app/main/default/objects/Contract_Request_Form__c/fields/EmailAlert__c.field-meta.xml
<CustomField>
    <fullName>EmailAlert__c</fullName>
    <defaultValue>&quot;contractreview.NA@hill-rom.com&quot;</defaultValue>
    <label>EmailAlert</label>
    <type>Email</type>
</CustomField>