force-app/main/default/objects/Contract_Request_Form__c/fields/If_sooner_than_10_days_list_why__c.field-meta.xml
<CustomField>
    <fullName>If_sooner_than_10_days_list_why__c</fullName>
    <label>If sooner than 10 days list why</label>
    <length>250</length>
    <type>Text</type>
</CustomField>