force-app/main/default/objects/Contract_Request_Form__c/fields/Key_Customer_Contact_Name_Phone_E_m__c.field-meta.xml
<CustomField>
    <fullName>Key_Customer_Contact_Name_Phone_E_m__c</fullName>
    <label>Key Customer Contact (Name/Phone/E-m</label>
    <length>255</length>
    <type>Text</type>
</CustomField>