force-app/main/default/objects/Contract_Request_Form__c/fields/Legal_if_required__c.field-meta.xml
<CustomField>
    <fullName>Legal_if_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal (if required)</label>
    <type>Checkbox</type>
</CustomField>