force-app/main/default/objects/Contract_Request_Form__c/fields/List_special_notes_considerations__c.field-meta.xml
<CustomField>
    <fullName>List_special_notes_considerations__c</fullName>
    <label>List special notes / considerations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>