force-app/main/default/objects/Contract_Request_Form__c/fields/Required_Response_Date_10_Day_Std__c.field-meta.xml
<CustomField>
    <fullName>Required_Response_Date_10_Day_Std__c</fullName>
    <label>Required Response Date (10 Day Std.)</label>
    <type>Date</type>
</CustomField>