force-app/main/default/objects/Contract_Request_Form__c/fields/Sales_Management__c.field-meta.xml
<CustomField>
    <fullName>Sales_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Management</label>
    <type>Checkbox</type>
</CustomField>