force-app/main/default/objects/Contract_Request_Form__c/fields/Service_if_required__c.field-meta.xml
<CustomField>
    <fullName>Service_if_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service (if required)</label>
    <type>Checkbox</type>
</CustomField>