force-app/main/default/objects/Contract_Request_Form__c/fields/X10_a_Contract_include_any_of_following__c.field-meta.xml
<CustomField>
    <fullName>X10_a_Contract_include_any_of_following__c</fullName>
    <label>10.a Contract include any of following?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Order Discount</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>Single Order Discount and Rebate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>