force-app/main/default/objects/Contract_Request_Form__c/fields/X10_b_Items_checked_in_10_prov_details__c.field-meta.xml
<CustomField>
    <fullName>X10_b_Items_checked_in_10_prov_details__c</fullName>
    <description>For any items checked in #10.a please provide details</description>
    <label>10.b Items checked in #10.a, prov detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>