force-app/main/default/objects/Contract_Request_Form__c/fields/X11_a_Services_training_or_other_include__c.field-meta.xml
<CustomField>
    <fullName>X11_a_Services_training_or_other_include__c</fullName>
    <description>Are any services, technical training or other items included in contract?</description>
    <label>11.a Services, training or other?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>