force-app/main/default/objects/Contract_Request_Form__c/fields/X11_b_Built_in_price_or_purch_separately__c.field-meta.xml
<CustomField>
    <fullName>X11_b_Built_in_price_or_purch_separately__c</fullName>
    <description>If yes, are items built into the price or is customer purchasing separately?</description>
    <label>11.b Built in price or purch separately</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>