force-app/main/default/objects/Contract_Request_Form__c/fields/X11_c_List__c.field-meta.xml
<CustomField>
    <fullName>X11_c_List__c</fullName>
    <label>11.c List specific details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>