force-app/main/default/objects/Contract_Request_Form__c/fields/X1_a_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>X1_a_Contract_Type__c</fullName>
    <label>1.a Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GPO</fullName>
            </value>
            <value>
                <fullName>IDN/Local Agreement</fullName>
            </value>
            <value>
                <fullName>Proposal/Purchase Order &amp; T&amp;Cs</fullName>
            </value>
            <value>
                <fullName>Subcontract</fullName>
            </value>
            <value>
                <fullName>CWS Master Agreement</fullName>
            </value>
            <value>
                <fullName>Business Associate (BAA)</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Non-Disclosure (NDA)</fullName>
            </value>
            <value>
                <fullName>Distribution Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>