force-app/main/default/objects/Contract_Request_Form__c/fields/X1_a_Proposed_Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>X1_a_Proposed_Agreement_Start_Date__c</fullName>
    <label>1.a Proposed Agreement Start Date</label>
    <type>Date</type>
</CustomField>