force-app/main/default/objects/Contract_Request_Form__c/fields/X1_b_If_Other_list_type_here__c.field-meta.xml
<CustomField>
    <fullName>X1_b_If_Other_list_type_here__c</fullName>
    <label>1.b If &quot;Other&quot; list type here:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>