force-app/main/default/objects/Contract_Request_Form__c/fields/X1_b_Reason_for_specific_start_date__c.field-meta.xml
<CustomField>
    <fullName>X1_b_Reason_for_specific_start_date__c</fullName>
    <description>If reason for specific start date explain</description>
    <label>1.b Reason for specific start date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>