force-app/main/default/objects/Contract_Request_Form__c/fields/X2_Agreement_Length_e_g_1_2_or_3_Yrs__c.field-meta.xml
<CustomField>
    <fullName>X2_Agreement_Length_e_g_1_2_or_3_Yrs__c</fullName>
    <label>2. Agreement Length(e.g. 1, 2 or 3 Yrs)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>