force-app/main/default/objects/Contract_Request_Form__c/fields/X2_Annual_Value_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>X2_Annual_Value_of_Contract__c</fullName>
    <label>2. Annual Value of Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$250,000</fullName>
            </value>
            <value>
                <fullName>&gt;$250,000 - $1,000,000</fullName>
            </value>
            <value>
                <fullName>&gt;$1,000,000</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>