force-app/main/default/objects/Contract_Request_Form__c/fields/X3_New_Contract_or_Amendment_to_Existing__c.field-meta.xml
<CustomField>
    <fullName>X3_New_Contract_or_Amendment_to_Existing__c</fullName>
    <description>Is this a new contract or amendment to existing agreement?</description>
    <label>3. New Contract or Amendment to Existing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Contract</fullName>
            </value>
            <value>
                <fullName>Amendment to Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>