force-app/main/default/objects/Contract_Request_Form__c/fields/X3_What_Product_Categories_are_covered__c.field-meta.xml
<CustomField>
    <fullName>X3_What_Product_Categories_are_covered__c</fullName>
    <label>3. What Product Categories are covered?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frames</fullName>
            </value>
            <value>
                <fullName>Surfaces</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Stretchers</fullName>
            </value>
            <value>
                <fullName>Communications (Nurse Call)</fullName>
            </value>
            <value>
                <fullName>SmartSync</fullName>
            </value>
            <value>
                <fullName>Lifts</fullName>
            </value>
            <value>
                <fullName>Trumpf Tables</fullName>
            </value>
            <value>
                <fullName>Trumpf Booms</fullName>
            </value>
            <value>
                <fullName>Trumpf Lights</fullName>
            </value>
            <value>
                <fullName>Welch Allyn</fullName>
            </value>
            <value>
                <fullName>Rental Therapy</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Allen Medical</fullName>
            </value>
            <value>
                <fullName>Aspen Surgical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>