force-app/main/default/objects/Contract_Request_Form__c/fields/X4_a_Award_Status__c.field-meta.xml
<CustomField>
    <fullName>X4_a_Award_Status__c</fullName>
    <label>4.a Award Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Commitment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>