force-app/main/default/objects/Contract_Request_Form__c/fields/X4_b_If_Commitment_what_or__c.field-meta.xml
<CustomField>
    <fullName>X4_b_If_Commitment_what_or__c</fullName>
    <label>4.b If &quot;Commitment&quot;, what % or $?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>80% (Hill-Rom standard approved percentage)</fullName>
            </value>
            <value>
                <fullName>&lt;80% (Requires Finance &amp; Government Team approval)</fullName>
            </value>
            <value>
                <fullName>&gt;80% (Requires Legal approval)</fullName>
            </value>
            <value>
                <fullName>Specified Annual Dollar Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>