force-app/main/default/objects/Contract_Request_Form__c/fields/X4_c_If_4_b_is_required_list_spend_here__c.field-meta.xml
<CustomField>
    <fullName>X4_c_If_4_b_is_required_list_spend_here__c</fullName>
    <description>If 4.b is required dollar spend amount, list here</description>
    <label>4.c If 4.b required, list $ spend here</label>
    <length>255</length>
    <type>Text</type>
</CustomField>