force-app/main/default/objects/Contract_Request_Form__c/fields/X4_Starting_Form_Template__c.field-meta.xml
<CustomField>
    <fullName>X4_Starting_Form_Template__c</fullName>
    <label>4. Starting Form/Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Template</fullName>
            </value>
            <value>
                <fullName>Hill-Rom Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>