force-app/main/default/objects/Contract_Request_Form__c/fields/X5_a_IDN_Local_Agrmt_Only_GPO_Affiliatio__c.field-meta.xml
<CustomField>
    <fullName>X5_a_IDN_Local_Agrmt_Only_GPO_Affiliatio__c</fullName>
    <label>5.a IDN/Local Agrmt Only-GPO Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vizient</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Intalere</fullName>
            </value>
            <value>
                <fullName>ROI</fullName>
            </value>
            <value>
                <fullName>HealthTrust</fullName>
            </value>
            <value>
                <fullName>The Resource Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>