force-app/main/default/objects/Contract_Request_Form__c/fields/X5_b_If_Other_in_5_a_list_GPO_here__c.field-meta.xml
<CustomField>
    <fullName>X5_b_If_Other_in_5_a_list_GPO_here__c</fullName>
    <label>5.b If &quot;Other&quot; in 5.a list GPO here:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>