force-app/main/default/objects/Contract_Request_Form__c/fields/X5_How_are_products_being_sold__c.field-meta.xml
<CustomField>
    <fullName>X5_How_are_products_being_sold__c</fullName>
    <label>5. How are products being sold?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>