force-app/main/default/objects/Contract_Request_Form__c/fields/X6_a_Existing_contracts_with_Hill_Rom__c.field-meta.xml
<CustomField>
    <fullName>X6_a_Existing_contracts_with_Hill_Rom__c</fullName>
    <description>Does the customer have existing contracts with Hill-Rom or other Hill-Rom subsidiaries?</description>
    <label>6.a Existing contracts with Hill-Rom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>