force-app/main/default/objects/Contract_Request_Form__c/fields/X6_b_If_Yes_to_6_a_please_list_division__c.field-meta.xml
<CustomField>
    <fullName>X6_b_If_Yes_to_6_a_please_list_division__c</fullName>
    <description>(e.g. Welch Allyn, Trumpf, etc)</description>
    <label>6.b If &quot;Yes&quot; to 6.a please list division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>