force-app/main/default/objects/Contract_Request_Form__c/fields/X6_Provide_approved_pricing_discounts__c.field-meta.xml
<CustomField>
    <fullName>X6_Provide_approved_pricing_discounts__c</fullName>
    <description>Please provide approved pricing/discounts with form submission (if not approved, indicate why)</description>
    <label>6. Provide approved pricing/discounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>