force-app/main/default/objects/Contract_Request_Form__c/fields/X7_a_Is_pricing_firm__c.field-meta.xml
<CustomField>
    <fullName>X7_a_Is_pricing_firm__c</fullName>
    <label>7.a Is pricing firm?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>