force-app/main/default/objects/Contract_Request_Form__c/fields/X7_b_If_discount_off_list_indicate_year__c.field-meta.xml
<CustomField>
    <fullName>X7_b_If_discount_off_list_indicate_year__c</fullName>
    <description>If a discount off list, indicate list price year</description>
    <label>7.b If discount off list, indicate year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>