force-app/main/default/objects/Contract_Request_Form__c/fields/X7_c_How_long_is_pricing_firm__c.field-meta.xml
<CustomField>
    <fullName>X7_c_How_long_is_pricing_firm__c</fullName>
    <description>How long is pricing firm? (e.g. initial term, 1 yr.)?</description>
    <label>7.c How long is pricing firm?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>