force-app/main/default/objects/Contract_Request_Form__c/fields/X7_Multiple_Facilities_access_contract__c.field-meta.xml
<CustomField>
    <fullName>X7_Multiple_Facilities_access_contract__c</fullName>
    <description>Will multiple facilities be able to access contract?</description>
    <label>7. Multiple Facilities access contract?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (Please provide detailed facility listing with form submission)</fullName>
            </value>
            <value>
                <fullName>No (Indicates only applies to customer name and address listed above)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>