force-app/main/default/objects/Contract_Request_Form__c/fields/X7_Non_owned_affiliates_extend_access__c.field-meta.xml
<CustomField>
    <fullName>X7_Non_owned_affiliates_extend_access__c</fullName>
    <description>Does customer have non-owned affiliates we intend to extend access to this contract?
(e.g. other hospitals customer wishes to extend access to the contract)</description>
    <label>8. Non-owned affiliates extend access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (please provide detailed affiliate listing with form submission)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>