force-app/main/default/objects/Contract_Request_Form__c/fields/X8_Deviations_from_HR_standard_terms__c.field-meta.xml
<CustomField>
    <fullName>X8_Deviations_from_HR_standard_terms__c</fullName>
    <label>8. Deviations from HR standard terms?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
            <value>
                <fullName>Delivery/Shipment</fullName>
            </value>
            <value>
                <fullName>Warranty (Length/Start)</fullName>
            </value>
            <value>
                <fullName>Restocking Fee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>