force-app/main/default/objects/Contract_Request_Form__c/fields/X9_Where_deviations_exist_please_list__c.field-meta.xml
<CustomField>
    <fullName>X9_Where_deviations_exist_please_list__c</fullName>
    <description>Where deviations exist to Hill-Rom&apos;s standard terms listed in #8, please list:</description>
    <label>9. Where deviations exist, please list:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>