force-app/main/default/objects/Contract_Request_Form__c/validationRules/ContractTypeBAA_Eval_NDAGeneralInfo.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractTypeBAA_Eval_NDAGeneralInfo</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    OR(
       ISPICKVAL( X1_a_Contract_Type__c , &apos;Business Associate (BAA)&apos;),
       ISPICKVAL( X1_a_Contract_Type__c , &apos;Evaluation&apos;),
       ISPICKVAL( X1_a_Contract_Type__c , &apos;Non-Disclosure (NDA)&apos;)
       ) ,
    OR(
       ISNULL(TEXT(X3_New_Contract_or_Amendment_to_Existing__c)) ,
       ISNULL(TEXT(X4_Starting_Form_Template__c))
       )
)</errorConditionFormula>
    <errorMessage>New Contract or Amendment to Existing and Starting Form Template cannot be blank for BAA, Evaluation or NDA</errorMessage>
</ValidationRule>