force-app/main/default/objects/Contract_Request_Form__c/validationRules/ContractTypeCWSMasterSpecificDetails.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractTypeCWSMasterSpecificDetails</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
       ISPICKVAL( X1_a_Contract_Type__c , &apos;CWS Master Agreement&apos;) ,
    OR(
       ISNULL(TEXT(X1_a_Proposed_Agreement_Start_Date__c)) , 
       ISNULL(X1_b_Reason_for_specific_start_date__c) , 
       ISNULL(X2_Agreement_Length_e_g_1_2_or_3_Yrs__c),
       ISNULL(X3_What_Product_Categories_are_covered__c),
       ISNULL(TEXT(X4_a_Award_Status__c)),
       ISNULL(TEXT(X4_b_If_Commitment_what_or__c)),
       ISNULL(X4_c_If_4_b_is_required_list_spend_here__c)
       )
)</errorConditionFormula>
    <errorMessage>Itema 1 through 4 of Detail Section cannot be blank for CWS Master Agreement</errorMessage>
</ValidationRule>