force-app/main/default/objects/Contract_Request_Form__c/listViews/ContractRequestForm_Contract_Request_Form.listView-meta.xml
<ListView>
    <fullName>ContractRequestForm_Contract_Request_Form</fullName>
    <filterScope>Queue</filterScope>
    <label>ContractRequestForm</label>
    <queue>ContractRequestForm</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>